# weathersched

./: .gitignore  README.md  alembic.ini  db.sqlite3.bak  noxfile.py  pyproject.toml
config/: settings.toml
config/db/: .secrets.example.toml  settings.toml
config/weatherapi/: .secrets.example.toml  settings.toml
containers/: .env.example  .gitignore  celery.Dockerfile  docker-compose.yml  initdb.Dockerfile
migrations/: env.py
migrations/versions/: 46a9b9ba9cca_autogenerated_migration.py
scripts/: db_init.py
scripts/celery/: count_current_weather_rows.py  count_weather_forecast_rows.py  current_weather_background_task.py  start_celery_beat.py  start_celery_worker.py
src/weathersched/: __init__.py  main.py
src/weathersched/celeryapp/: __init__.py  celery_main.py  settings.py
src/weathersched/celeryapp/tasks/scheduled/: __init__.py  tasks.py
src/weathersched/celeryapp/tasks/weather_apis/: __init__.py
src/weathersched/celeryapp/tasks/weather_apis/weatherapi/: __init__.py  tasks.py
src/weathersched/core/: __init__.py  constants.py
src/weathersched/core/db/: __init__.py  __methods.py  annotated.py  base.py  settings.py  utils.py
src/weathersched/core/depends/: __init__.py  db_depends.py
src/weathersched/core/http_lib/: __init__.py  cache.py  client.py  constants.py  controllers.py
src/weathersched/core/setup/: __init__.py  __setup.py
src/weathersched/domain/: __init__.py  schemas.py
src/weathersched/domain/location/: __init__.py  models.py  repository.py  schemas.py
src/weathersched/domain/weather/: __init__.py
src/weathersched/domain/weather/current/: __init__.py  models.py  repository.py  schemas.py
src/weathersched/domain/weather/forecast/: __init__.py  models.py  repository.py  schemas.py
src/weathersched/domain/weather/weather_alerts/: __init__.py  schemas.py
src/weathersched/remote_apis/weatherapi_client/: __init__.py  constants.py  methods.py  settings.py
src/weathersched/remote_apis/weatherapi_client/client/: __init__.py  __methods.py  current.py  forecast.py  requests.py
